
You should have received a copy of the GNU General Public License
along with EditXT.  If not, see <http://www.gnu.org/licenses/>.

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

This file contains notable new features and other large changes. See
the source repository for the gory details of what actually happened.

????-??-?? - 1.x.x
  - Fix bugs related to app termination with unsaved documents.
  - Allow close document from menu and with COMMAND+W hotkey
  - Many improvements on command bar
    - More commands: wrap, sort, find/replace
    - Argument placeholders/hints
    - Tab completion
    - Command history
  - Improve exception logging.
  - Fix startup errors due to strange arguments passed by OS X.
  - Fix long pause on quit with many documents open.

2013-01-05 - 1.2.0
  - Add command bar (needs more work, but it's minimally usable).
  - Add "Goto Line" command.
  - Store app config and state in ~/.editxt.
  - Add "xt" command line script to packaged app.
  - Display full path in window title and document tooltips.
  - Fix cursor column status view: left-most position is now 0 instead of 1.
  - Create new (empty) document when opening non-existent path from command
    line.
  - Always move (do not copy) document or project on internal drag.

2012-05-22 - 1.1.0
  - Added non-padded (un)comment text command. This is now the default comment
    mode (SHIFT+COMMA). Moved old command to SHIFT+COMMAND+COMMA.
  - Improve button text in find/replace dialog.
  - Fixed bug in backspace at end of line with trailing whitespace.
  - Fixed bug in document auto-reload which caused a prompt to "Save As..."
    on next save.
  - Fixed bug: crash on OS X Lion when collapsing project.
  - Fixed bug: crash on OS X Lion due to no current project in settings file on
    launch. 'NSNull' object has no attribute 'indexAtPosition_' in editor.py
    line 290, in get_current_project.
  - Internal: upgrade to PyObjC 2.3 and Python 2.7.3.