@@ -48,24 +48,30 @@ WRAPTOKEN = "WRAPTOKEN"
 
 def toggle_boolean(depname):
     def make_property(func):
-        name = "_" + func.__name__
+        name = func.__name__
         def fget(self):
-            return getattr(self, name)
+            try:
+                return self.__dict__[name]
+            except KeyError:
+                raise AttributeError(name)
         def fset(self, value):
-            setattr(self, name, value)
+            self.__dict__[name] = value
             if value:
-                setattr(self, depname, False)
+                self.__dict__[depname] = False
         return property(fget, fset)
     return make_property
 
 def mutable_array_property(name):
     def fget(self):
-        return getattr(self, name)
+        try:
+            return self.__dict__[name]
+        except KeyError:
+            raise AttributeError(name)
     def fset(self, value):
         try:
-            array = getattr(self, name)
-        except AttributeError:
-            setattr(self, name, NSMutableArray.arrayWithArray_(value))
+            array = self.__dict__[name]
+        except KeyError:
+            self.__dict__[name] = NSMutableArray.arrayWithArray_(value)
         else:
             # FIX problem here: KVO notifications not sent
             array.setArray_(value)
@@ -90,8 +96,8 @@ class FindOptions(Options):
         "regular_expression": ["match_entire_word"],
     }
 
-    recent_finds = mutable_array_property("_recent_finds")
-    recent_replaces = mutable_array_property("_recent_replaces")
+    recent_finds = mutable_array_property("recent_finds")
+    recent_replaces = mutable_array_property("recent_replaces")
 
     @toggle_boolean("match_entire_word")
     def regular_expression(): pass
@@ -134,6 +140,43 @@ class Finder(object):
 
     def replace_all_in_selection(self, sender):
         self._replace_all(in_selection=True)
+
+    def mark_occurrences(self, ftext, regex=False, color=None):
+        """Mark occurrences of ftext in target
+
+        This method always clears all existing text marks, and marks
+        nothing if the given `ftext` is an empty string.
+
+        :ftext: A string of text to find/mark.
+        :regex: Boolean value indicating if ftext is a regular expression.
+        :color: Color used to mark ranges. Yellow (#FEFF6B) by default.
+        :returns: Number of marked occurrences.
+        """
+        if color is None:
+            # TODO move getColor helper function to a utility module
+            from editxt.syntax import SyntaxDefinition
+            color = SyntaxDefinition.getColor("FEFF6B")
+        target = self.find_target()
+        ts = target.textStorage()
+        full_range = NSMakeRange(0, ts.length())
+        ts.removeAttribute_range_(NSBackgroundColorAttributeName, full_range)
+        if not ftext:
+            return 0
+        text = target.string()
+        options = self.opts
+        if regex and options.regular_expression:
+            finditer = self.regexfinditer
+        elif options.match_entire_word:
+            ftext = u"\\b" + re.escape(ftext) + u"\\b"
+            finditer = self.regexfinditer
+        else:
+            finditer = self.simplefinditer
+        count = 0
+        mark_range = ts.addAttribute_value_range_
+        for found in finditer(text, ftext, full_range, FORWARD, False):
+            mark_range(NSBackgroundColorAttributeName, color, found.range)
+            count += 1
+        return count
 
     @property
     def find_value(self):
@@ -456,7 +499,8 @@ class FindController(PanelController):
 
     def panelCountFindText_(self, sender):
         if self.validate_expression():
-            self.count_occurrences(self.finder.find_value, True)
+            self.count_occurrences(
+                self.finder.find_value, self.opts.regular_expression)
 
     def panelCountReplaceText_(self, sender):
         if self.validate_expression():
@@ -497,17 +541,7 @@ class FindController(PanelController):
     def count_occurrences(self, ftext, regex):
         target = self.find_target()
         if target is not None and ftext:
-            text = target.string()
-            range = NSMakeRange(0, text.length())
-            options = self.opts
-            if regex and options.regular_expression:
-                finditer = self.finder.regexfinditer
-            elif regex and options.match_entire_word:
-                ftext = u"\\b" + re.escape(ftext) + u"\\b"
-                finditer = self.finder.regexfinditer
-            else:
-                finditer = self.finder.simplefinditer
-            count = sum(1 for x in finditer(text, ftext, range, FORWARD, False))
+            count = self.finder.mark_occurrences(ftext, regex)
             if count:
                 self.flash_status_text(u"%i occurrences" % count)
             else:
